@@ -14,6 +14,7 @@ For 5.0
     TODO: New button-based output mode?
     TODO: Initial focus in Platypus window should be "App Name" text field, not Icon View
     TODO: Make Status Items look good in Yosemite's Dark Mode: http://indiestack.com/2014/10/yosemites-dark-mode/
+    TODO:  Save font size in Platypus-generated apps into NSUserDefaults
 
 For 4.9
     * Users can now manually increase/decrease the font size in Platypus-generated apps
